<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_hide_read"
        android:orderInCategory="200"
        android:title="@string/hide_read"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mark_all_read"
        android:orderInCategory="300"
        android:title="@string/mark_all_read"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="400"
        android:title="@string/delete_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all_read"
        android:orderInCategory="500"
        android:title="@string/delete_all_read"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by"
        android:orderInCategory="600"
        android:title="@string/sort_by"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_switch_layout"
        android:orderInCategory="700"
        android:title="@string/switch_layout"
        app:showAsAction="never" />
</menu>
